--- a/docs/api/overview.mdx
+++ b/docs/api/overview.mdx
@@ -27,11 +27,10 @@ DeCash API is currently in alpha testing phase. You can talk to API using the fo
 ## API methods
 
 + [AssetInfo](/docs/api/algorand/asset-info)
-+ [TransactionStatus](/docs/api/algorand/transaction-status)
 + [CloseDelegatedWallet](/docs/api/algorand/close-delegated-wallet)
-+ [CreateDelegatedPayment](/docs/api/algorand/create-delegated-payment)
 + [CreateDelegatedWallet](/docs/api/algorand/create-delegated-wallet)
 + [ManyToOneTransfer](/docs/api/algorand/many-to-one-transfer)
 + [OneToManyTransfer](/docs/api/algorand/one-to-many-transfer)
 + [SubmitTransaction](/docs/api/algorand/submit-transaction)
-+ [TransferFunds](/docs/api/algorand/transfer-funds)
++ [TransactionStatus](/docs/api/algorand/transaction-status)
++ [TransferTokens](/docs/api/algorand/transfer-tokens)
