Update API examples to match current endpoint

--- a/docs/getting-started/installation.mdx
+++ b/docs/getting-started/installation.mdx
@@ -47,7 +47,7 @@ import fetch from 'node-fetch';
 An example API invocation would be:
 
 ```js
-const response = await fetch('https://api.decash.com/CreateDelegatedWallet', {
+const response = await fetch('https://delegator-dev01b.arringo.co/api-test/CreateDelegatedWallet', {
   method: 'POST',
   body: JSON.stringify({
     "owner": "6E63EKJYUPLL4SKM5FNX3PD7HSWZ26XPS7BXYLVWJAPDEK3VA7DERTFV4E"
