--- a/docs/api/algorand/transaction-status.mdx
+++ b/docs/api/algorand/transaction-status.mdx
@@ -36,7 +36,7 @@ Returned when the parameters are invalid.
 <TabItem value="js" label="JavaScript">
 
 ```js
-const response = await fetch('https://api.decash.com/TransactionStatus', {
+const response = await fetch('https://delegator-dev01b.arringo.co/api-test/TransactionStatus', {
   method: 'POST',
   body: JSON.stringify({
     'txId': 'G4UDVVAOFUH6UZMPSP6TONQOHPPZEXLPT3DLK3ONNHLFSUQ6VB6Q'})
