--- a/docs/api/algorand/transfer-tokens.mdx
+++ b/docs/api/algorand/transfer-tokens.mdx
@@ -66,7 +66,7 @@ Returned when a user is sending funds to a non-[Delegated Wallet](/docs/concepts
 <TabItem value="js" label="JavaScript">
 
 ```js
-const response = await fetch('https://api.decash.com/TransferTokens', {
+const response = await fetch('https://delegator-dev01b.arringo.co/api-test/TransferTokens', {
   method: 'POST',
   body: JSON.stringify({
     'assetId': 'USDD', 
