Remove WalletsInfo warning and add it to overview

--- a/docs/api/overview.mdx
+++ b/docs/api/overview.mdx
@@ -34,3 +34,4 @@ DeCash API is currently in alpha testing phase. You can talk to API using the fo
 + [SubmitTransaction](/docs/api/algorand/submit-transaction)
 + [TransactionStatus](/docs/api/algorand/transaction-status)
 + [TransferTokens](/docs/api/algorand/transfer-tokens)
++ [WalletsInfo](/docs/api/algorand/wallets-info)
