Warn about deprecating CloseDelegatedWallet

--- a/docs/api/algorand/close-delegated-wallet.mdx
+++ b/docs/api/algorand/close-delegated-wallet.mdx
@@ -1,5 +1,9 @@
 # CloseDelegatedWallet
 
+:::warning
+This API endpoint is being deprecated in favor of [TransferTokens](/docs/api/algorand/transfer-tokens) which will get the new "max" parameter.
+:::
+
 Close the balance of a DeCash asset of a [Delegated Wallet](/docs/concepts/delegated-wallets), sending the remaining funds to another (regular or delegated) wallet.
 
 ## Request Parameters
