--- a/docs/api/fees.mdx
+++ b/docs/api/fees.mdx
@@ -18,3 +18,4 @@ At the moment, DeCash API takes the same fee for all currencies. DeCash may upda
 | USDD         | 0.01                                                 | ⌊1 + (N – 1) × 0.33⌉ ÷ 100                                        | ⌊1 + (N – 1) × 0.5⌉ ÷ 100                                         |
 | EURD         | 0.01                                                 | ⌊1 + (N – 1) × 0.33⌉ ÷ 100                                        | ⌊1 + (N – 1) × 0.5⌉ ÷ 100                                         |
 | GBPD         | 0.01                                                 | ⌊1 + (N – 1) × 0.33⌉ ÷ 100                                        | ⌊1 + (N – 1) × 0.5⌉ ÷ 100                                         |
+| CHFD         | 0.01                                                 | ⌊1 + (N – 1) × 0.33⌉ ÷ 100                                        | ⌊1 + (N – 1) × 0.5⌉ ÷ 100                                         |
