--- a/docs/api/algorand/transfer-tokens.mdx
+++ b/docs/api/algorand/transfer-tokens.mdx
@@ -7,7 +7,7 @@ Send DeCash from one wallet to another. This endpoint work for both regular and 
 |     Name    |                Type               | Description |
 | ----------- | --------------------------------- | ----------- |
 | `assetId`   | `string`                          | The ID of the DeCash asset that is being sent. |
-| `sender`    | `{address:string, amount:number}` | Object containing the `address` of the wallet that is sending the funds, and the `amount` that is being sent. Note that this account must have enough funds to cover both the `amount`, and the [fee](#TODO). |
+| `sender`    | `{address:string, amount:number}` | Object containing the `address` of the wallet that is sending the funds, and the `amount` that is being sent. Note that this account must have enough funds to cover both the `amount`, and the [fee](/docs/api/fees). |
 | `receiver`  | `string`                          | The address of the account that is receiving the funds. Note that, if this account is not a Delegated Wallet, then it must be opted into the token that is being sent. | 
 
 ## Responses
@@ -27,7 +27,7 @@ Returned when the parameters are invalid.
 | ----------- | ----------------------------------------------------------------- |
 | Status code | 400                                                               |
 | `errorId`   | `INVALID_PARAMS`                                                  |
-| `message`   | `Validation errors in TransferTokens request.`                     | 
+| `message`   | `Validation errors in TransferTokens request.`                    | 
 | `errors`    | Array of strings containing additional informations.              |
 
 ### Sender not opted in 
