--- a/docs/api/algorand/many-to-one-transfer.mdx
+++ b/docs/api/algorand/many-to-one-transfer.mdx
@@ -7,8 +7,9 @@ Send funds from multiple [Delegated Wallet](/docs/concepts/delegated-wallets) (o
 |     Name    |                    Type                   | Description |
 | ----------- | ----------------------------------------- | ----------- | 
 | `assetId`   | `string`                                  | The ID of the DeCash asset that is being sent. |
-| `senders`   | `Array<{address:string, amount:number}>`  | Array of objects containing the `address` of the accounts that are sending the funds, and the respective `amount` that are being sent. Note that each account must have enough funds to cover both the `amount`, and the [fee](/docs/api/fees). **This array can be 6 addresses at max**. |
+| `senders`   | `Array<{address:string, amount:number}>`  | Array of objects containing the `address` of the accounts that are sending the funds, and the respective `amount` that are being sent. Note that the account specified as the fee payer must have enough funds to cover both the `amount`, and the [fee](/docs/api/fees). **This array can be 4 addresses at max**. |
 | `receiver`  | `string`                                  | The address of the account that is receiving the funds. Note that, if this account is not a Delegated Wallet, then it must be opted into the token that is being sent. | 
+| `feePayer`  | `string`                                  | OPTIONAL. The address of the account that will pay the fee for the whole group. By default, it is equal to the first sender. The specified address must be one of the senders. |
 
 ## Responses
 
