Update CreateDelegatedWallet example with seed response

--- a/docs/api/algorand/create-delegated-wallet.mdx
+++ b/docs/api/algorand/create-delegated-wallet.mdx
@@ -57,6 +57,7 @@ const data = await response.json();
 
 ```json
 {
-  "wallet": "I6DDMBWHBYARMXTGAJMQUHDMLEZOUD37FGGP62FOQOCXTFAQJ6PILHDV4Y"
+  "wallet": "STYYW6RNT22UDQFTPYKKLCI6LHWQKDXIYY62LIU7SH3CUTEYY4XREEHGCA",
+  "seed": 0,
 }
 ```
