--- a/docs/api/algorand/asset-info.mdx
+++ b/docs/api/algorand/asset-info.mdx
@@ -6,7 +6,7 @@ Returns information about every supported token (or about the queried `assetId` 
 
 |     Name    |                Type               | Description |
 | ----------- | --------------------------------- | ----------- |
-| `assetId`   | `string`                          | The ID of the DeCash asset of which informations will be returned. If not set, informations about all DeCash tokens will be returned. |
+| `assetId`   | `string`                          | **OPTIONAL.** The ID of the DeCash asset of which informations will be returned. If not set, informations about all DeCash tokens will be returned. |
 
 ## Responses
 
