Update API docs

--- a/docs/api/overview.mdx
+++ b/docs/api/overview.mdx
@@ -8,8 +8,7 @@ import TOCInline from '@theme/TOCInline';
 # Overview
 
 :::warning
-DeCash currently released an **alpha** version of its API for testing. This API may receive breaking changes
-at any moment.
+DeCash has released a **beta** versions of its API for testing. This API can still receive breaking changes.
 :::
 
 DeCash API is the RPC-like API. It uses `POST` methods only and accepts/responds with `application/json`
@@ -20,8 +19,8 @@ body content types.
 
 DeCash API is currently in alpha testing phase. You can talk to API using the following endpoints:
 
-+ For test DeCash tokens in the [test Algorand network](/docs/concepts/algorand#networks), use `https://delegator-dev01b.arringo.co/api-test/` 
-<!-- + For DeCash tokens in the [main Algorand network](/docs/concepts/algorand#networks), use `https://` -->
++ For test DeCash tokens in the [test Algorand network](/docs/concepts/algorand#networks), use `https://api.preprod.decash.com/v1/`.
++ For test DeCash tokens in the [main Algorand network](/docs/concepts/algorand#networks), use `https://api.decash.com/v1/`.
 
 
 ## API Methods
