--- a/docs/api/overview.mdx
+++ b/docs/api/overview.mdx
@@ -17,10 +17,10 @@ body content types.
 
 ## Using this API
 
-DeCash API is currently in alpha testing phase. You can talk to API using the following endpoints:
+DeCash API is currently in beta testing phase. You can talk to API using the following endpoints:
 
-+ For test DeCash tokens in the [test Algorand network](/docs/concepts/algorand#networks), use `https://api.preprod.decash.com/v1/`.
-+ For test DeCash tokens in the [main Algorand network](/docs/concepts/algorand#networks), use `https://api.decash.com/v1/`.
++ For [main Algorand network](/docs/concepts/algorand#networks), use [https://api.decash.com/v1/](https://api.decash.com/v1/) (see [status](https://stats.uptimerobot.com/PpVJnF0y02)).
++ For [test Algorand network](/docs/concepts/algorand#networks), use [https://api.preprod.decash.com/v1/](https://api.preprod.decash.com/v1/).
 
 
 ## API Methods
