Add verifier paragraph to delegated wallets

--- a/docs/concepts/delegated-wallets.mdx
+++ b/docs/concepts/delegated-wallets.mdx
@@ -24,6 +24,16 @@ A clear distinction should be made between Delegated Wallets and regular Algoran
 
 <CenteredImage alt="DeCash ecosystem" src="/img/delegated-wallets-2.png" width={600}/>
 
+## Verifier
+
+To check if transactions groups are of the correct form, calls to the `verifier` smart contract are included in all transactions that involve delegated wallets.
+
+MainNet:
++ [app ID `661955541`](https://algoexplorer.io/application/661955541)
+
+TestNet:
++ [app ID `71013728`](https://testnet.algoexplorer.io/application/71013728)
+
 
 ## Use cases
 
