--- a/docs/api/algorand/submit-transaction.mdx
+++ b/docs/api/algorand/submit-transaction.mdx
@@ -22,6 +22,7 @@ SubmitTransaction will send the blockchain transaction to the network without wa
 |     Name    |         Type        | Description |
 | ----------- | ------------------- | ----------- | 
 | `txIds`     | `string[]`          | The array of transaction ids of the transactions that have been submitted. |
+| `txGroupId` | `string`            | A transaction group ID which groups the submitted transactions.            |
 
 ### Validation errors
 
@@ -78,6 +79,7 @@ const data = await response.json();
 		"E4DTKHC2COBNVZ6WKXZHNDRSHN65SBWJ7FCOTLZKPKQ5KDLOSJBQ", 
 		"L6OJII4GFOTADQG55FQ7J6BRTF26PS7WODLRN5JA25YUBYQSTQ4Q", 
 		"34N5XJNL2V7TQZRN3DYNIFL22U2MWTWSIA4EH4NDI4CHNGVBC75A"
-	]
+	],
+	"txGroupId": "V/peBtQMK2oZECas1tobRmWw3DBttASP8X5MWHhBlsQ="
 }
 ```
