Add CreateTransactionGroup API page

--- a/docs/api/overview.mdx
+++ b/docs/api/overview.mdx
@@ -33,6 +33,7 @@ DeCash API is currently in beta testing phase. You can talk to API using the fol
 
 ### Transactional Methods
 
++ [CreateTransacrtionGroup](/docs/api/algorand/create-transaction-group)
 + [ManyToOneTransfer](/docs/api/algorand/many-to-one-transfer)
 + [OneToManyTransfer](/docs/api/algorand/one-to-many-transfer)
 + [TransferTokens](/docs/api/algorand/transfer-tokens)
