Update tx group example

--- a/docs/api/algorand/submit-transaction.mdx
+++ b/docs/api/algorand/submit-transaction.mdx
@@ -79,6 +79,7 @@ const data = await response.json();
 		"E4DTKHC2COBNVZ6WKXZHNDRSHN65SBWJ7FCOTLZKPKQ5KDLOSJBQ", 
 		"L6OJII4GFOTADQG55FQ7J6BRTF26PS7WODLRN5JA25YUBYQSTQ4Q", 
 		"34N5XJNL2V7TQZRN3DYNIFL22U2MWTWSIA4EH4NDI4CHNGVBC75A"
-	]
+	],
+	"txGroupId": "V/peBtQMK2oZECas1tobRmWw3DBttASP8X5MWHhBlsQ="
 }
 ```
