Update txGroupId description

--- a/docs/api/algorand/submit-transaction.mdx
+++ b/docs/api/algorand/submit-transaction.mdx
@@ -22,7 +22,7 @@ SubmitTransaction will send the blockchain transaction to the network without wa
 |     Name    |         Type        | Description |
 | ----------- | ------------------- | ----------- | 
 | `txIds`     | `string[]`          | The array of transaction ids of the transactions that have been submitted. |
-| `txGroupId` | `string`            | The identifier of the transaction group. |
+| `txGroupId` | `string`            | A transaction group ID which identifies the submitted transaction group. |
 
 ### Validation errors
 
