--- a/docs/api/algorand/create-transaction-group.mdx
+++ b/docs/api/algorand/create-transaction-group.mdx
@@ -19,7 +19,7 @@ Each txnObject must have one of the following forms.
 | `type`      | `"assetTransfer"`                        | Field indicating that this txnObject describes an asset transfer. |
 | `from`      | `string`                                 | The address of the account that is sending the funds. |
 | `to`        | `string`                                 | The address of the account that is receiving the funds. |
-| `asset`     | `string`\|`number`                          | The ID of the asset that is being sent. Can be either a string (i.e. USDD, EURD) or a number (i.e. 51987792, 51987793). |
+| `asset`     | `string`\|`number`                       | The ID of the asset that is being sent. Can be either a string (i.e. USDD, EURD) or a number (i.e. 51987792, 51987793). |
 | `amount`    | `number`                                 | The amount that is being sent. |
 | `closeTo`   | `string`                                 | OPTIONAL. If set, after sending the funds to the `to` account, sends the rest of the remaining funds to the `closeTo` account. |
 
@@ -38,13 +38,33 @@ Each txnObject must have one of the following forms.
 | `type`            | `"applicationCall"`                | Field indicating that this txnObject describes an application call. |
 | `from`            | `string`                           | The address of the account that is calling the application. |
 | `app`             | `string`                           | The ID of the application that is being called. |
-| `onComplete`      | `"NoOp"`\|`"OptIn"`\|<br/>`"CloseOut"`\|`"Update"`\|`"Delete"` | OPTIONAL. Describes the action that must be done after the call execution. By default is set to `"NoOp"`. |
+| `onComplete`      | `"NoOp"`\|`"OptIn"`\|<br/>`"CloseOut"`\|`"Update"`\|<br/>`"Delete"` | OPTIONAL. Describes the action that must be done after the call execution. By default is set to `"NoOp"`. |
 | `args`            | `Array<string`\|`number>`          | OPTIONAL. The arguments that must be passed to the application. By default is set to the empty list. |
 | `accounts`        | `Array<string>`                    | OPTIONAL. A [list of accounts](https://developer.algorand.org/docs/get-details/dapps/smart-contracts/apps/#smart-contract-arrays) that this application call will have access to. |
 | `assets`          | `Array<number>`                    | OPTIONAL. A [list of assets](https://developer.algorand.org/docs/get-details/dapps/smart-contracts/apps/#smart-contract-arrays) that this application call will have access to. |
 | `applications`    | `Array<number>`                    | OPTIONAL. A [list of applications](https://developer.algorand.org/docs/get-details/dapps/smart-contracts/apps/#smart-contract-arrays) that this application call will have access to. |
-| `approvalProgram` | `string`                           | OPTIONAL. Must be set if the `onComplete` field is set to `update`. Must be equal to the new approval program, encoded in base64.
-| `clearProgram`    | `string`                           | OPTIONAL. Must be set if the `onComplete` field is set to `update`. Must be equal to the new clear program, encoded in base64.
+| `approvalProgram` | `string`                           | OPTIONAL. Must be set if the `onComplete` field is set to `update`. Must be equal to the new approval program, encoded in base64. |
+| `clearProgram`    | `string`                           | OPTIONAL. Must be set if the `onComplete` field is set to `update`. Must be equal to the new clear program, encoded in base64. |
+| `maxSubTxns`      | `number`                           | OPTIONAL. If the contract that is being called needs to call other contracts, this value must be set to the maximum number of sub calls that the contract can make. |
+
+
+|        Name       |                   Type             | Description |
+| ----------------- | ---------------------------------- | ----------- |
+| `type`            | `"applicationCreate"`              | Field indicating that this txnObject describes the creation of a new application. |
+| `from`            | `string`                           | The address of the account that is creating the application. |
+| `approvalProgram` | `string`                           | The approval program of the contract, encoded in base64. |
+| `clearProgram`    | `string`                           | The clear program of the contract, encoded in base64. |
+| `globalInts`      | `number`                           | The number of uint64s that the global storage is composed of. |
+| `globalByteSlices`| `number`                           | The number of byte strings that the global storage is composed of. |
+| `localInts`       | `number`                           | The number of uint64s that each local storage is composed of. |
+| `localByteSlices` | `number`                           | The number of byte strings that each local storage is composed of. |
+| `extraPages`      | `number`                           | The number of extra 2kb pages that the application requires. |
+| `onComplete`      | `"NoOp"`\|`"OptIn"`\|<br/>`"CloseOut"`\|`"Update"`\|<br/>`"Delete"` | OPTIONAL. Describes the action that must be done after the call execution. By default is set to `"NoOp"`. |
+| `args`            | `Array<string`\|`number>`          | OPTIONAL. The arguments that must be passed to the application. By default is set to the empty list. |
+| `accounts`        | `Array<string>`                    | OPTIONAL. A [list of accounts](https://developer.algorand.org/docs/get-details/dapps/smart-contracts/apps/#smart-contract-arrays) that this application call will have access to. |
+| `assets`          | `Array<number>`                    | OPTIONAL. A [list of assets](https://developer.algorand.org/docs/get-details/dapps/smart-contracts/apps/#smart-contract-arrays) that this application call will have access to. |
+| `applications`    | `Array<number>`                    | OPTIONAL. A [list of applications](https://developer.algorand.org/docs/get-details/dapps/smart-contracts/apps/#smart-contract-arrays) that this application call will have access to. |
+| `maxSubTxns`      | `number`                           | OPTIONAL. If the contract that is being called needs to call other contracts, this value must be set to the maximum number of sub calls that the contract can make. |
 
 
 |     Name    |                   Type                   | Description |
@@ -60,7 +80,7 @@ Each txnObject must have one of the following forms.
 |     Name    |                   Type                  | Description |
 | ----------- | --------------------------------------- | ----------- | 
 | `txns`      | `Array<{txn:string, signers:string[]}>` | Array of objects each containing a transaction (in msgpack) and an array of `signers` (a list of addresses of the accounts that must sign the transaction). Transactions with an empty `signers` array shall not be signed. |
-| `info`      | `{fee:number}`                          | An object containing `fee`, the amount of DeCash that is being spent on fees in this transaction. (e.g. 1.05 USDD) | 
+| `info`      | `{fee:number}`                          | An object containing `fee`, the amount of DeCash that is being spent on fees in this transaction. (e.g. 1.05 USDD) |
 
 ### Validation errors
 
