Reference GetApplication in overview

--- a/docs/api/overview.mdx
+++ b/docs/api/overview.mdx
@@ -28,6 +28,7 @@ DeCash API is currently in beta testing phase. You can talk to API using the fol
 ### Informational Methods
 
 + [AssetInfo](/docs/api/algorand/asset-info)
++ [GetApplication](/docs/api/algorand/get-application)
 + [TransactionStatus](/docs/api/algorand/transaction-status)
 + [WalletsInfo](/docs/api/algorand/wallets-info)
 
