Updates: deprecated methods, decash-utils usage

--- a/docs/api/algorand/create-delegated-wallet.mdx
+++ b/docs/api/algorand/create-delegated-wallet.mdx
@@ -8,6 +8,11 @@ get all Delegated Wallets by having the owner wallet address and vice versa. If 
 prefer generating a unique owner address per each delegated wallet.
 :::
 
+:::note
+Delegated wallets can be created offline, in a deterministic way. If you prefer to create them offline,
+consider using [decash-utils](https://github.com/DeCash-Official/decash-utils).
+:::
+
 ## Request Parameters
 
 |     Name    |         Type        | Description |
