--- a/docs/api/algorand/many-to-one-transfer.mdx
+++ b/docs/api/algorand/many-to-one-transfer.mdx
@@ -1,5 +1,9 @@
 # ManyToOneTransfer
 
+:::warning
+Consider using [CreateTransactionGroup](/docs/api/algorand/create-transaction-group) endpoint for combining transfers.
+:::
+
 Send funds from multiple [Delegated Wallet](/docs/concepts/delegated-wallets) (owned by the same account), to another (regular or delegated) wallet, allowing to save a bit on the transfer fees.
 
 ## Request Parameters
