--- a/docs/api/algorand/one-to-many-transfer.mdx
+++ b/docs/api/algorand/one-to-many-transfer.mdx
@@ -1,5 +1,9 @@
 # OneToManyTransfer
 
+:::warning
+Consider using [CreateTransactionGroup](/docs/api/algorand/create-transaction-group) endpoint for combining transfers.
+:::
+
 Send funds from a [Delegated Wallet](/docs/concepts/delegated-wallets), to multiple other (regular or delegated) wallets, allowing to save a bit on the transfer fees.
 
 ## Request Parameters
