--- a/docs/api/algorand/transfer-tokens.mdx
+++ b/docs/api/algorand/transfer-tokens.mdx
@@ -1,5 +1,9 @@
 # TransferTokens
 
+:::warning
+Deprecated. Consider using [CreateTransactionGroup](/docs/api/algorand/create-transaction-group) with one transfer transaction.
+:::
+
 Send DeCash from one wallet to another. This endpoint work for both regular and delegated wallets.
 
 ## Request Parameters
