--- a/docs/api/overview.mdx
+++ b/docs/api/overview.mdx
@@ -35,9 +35,9 @@ DeCash API is currently in beta testing phase. You can talk to API using the fol
 ### Transactional Methods
 
 + [CreateTransacrtionGroup](/docs/api/algorand/create-transaction-group)
-+ [ManyToOneTransfer](/docs/api/algorand/many-to-one-transfer)
-+ [OneToManyTransfer](/docs/api/algorand/one-to-many-transfer)
-+ [TransferTokens](/docs/api/algorand/transfer-tokens)
++ [⚠️ ManyToOneTransfer](/docs/api/algorand/many-to-one-transfer)
++ [⚠️ OneToManyTransfer](/docs/api/algorand/one-to-many-transfer)
++ [⚠️ TransferTokens](/docs/api/algorand/transfer-tokens)
 
 To submit a signed transaction obtained from the methods above, use
 
@@ -45,4 +45,4 @@ To submit a signed transaction obtained from the methods above, use
 
 ### Utility Methods
 
-+ [CreateDelegatedWallet](/docs/api/algorand/create-delegated-wallet)
++ [CreateDelegatedWallet](/docs/api/algorand/create-delegated-wallet) (also consider using [decash-utils](https://github.com/DeCash-Official/decash-utils))
